--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
   },
   "devDependencies": {
     "coffee-coverage": "^1.0.1",
-    "coveralls": "^2.11.9",
-    "grunt": "~0.4",
+    "grunt": "^0.4.5",
     "grunt-coffeelint": "0.0.15",
     "grunt-contrib-clean": "^1.0.0",
     "grunt-contrib-coffee": "^1.0.0",
-    "istanbul": "^0.4.3",
+    "grunt-exec": "^0.4.6",
+    "grunt-istanbul": "^0.7.0",
     "merge": "^1.2.0",
     "should": "^8.3.1"
   },
